# dsm-graph-explorer

./: .dsm-graph-explorer.yml  .gitignore  LICENSE  LICENSE-DOCS.md  README.md  SPRINT_PLAN.md  pyproject.toml
.claude/: CLAUDE.md  dsm-ecosystem.md  last-align-report.md  last-align.txt  last-staa.txt  last-wrap-up.txt  parallel-sessions.txt  reasoning-lessons-compact.md  reasoning-lessons.md  session-transcript.md  settings.json  settings.local.json
.claude/transcripts/: 2026-02-23T12:49-ST.md  2026-02-24T23:41-ST.md  2026-02-25T07:51-ST.md  2026-02-28T20:11-ST.md  2026-03-02T09:33-ST.md  2026-03-09T03:02-ST.md  2026-03-09T20:00-ST.md  2026-03-10T14:20-ST.md  2026-03-11T10:00-ST.md  2026-03-11T16:41-ST.md  2026-03-12T05:33-ST.md  2026-03-13T07:01-ST.md  2026-03-17T11:30-ST.md  2026-03-17T17:07-ST.md  2026-03-18T11:15-ST.md  2026-03-20T11:17-ST.md  2026-03-21T11:11-ST.md  2026-04-08T00:00-ST.md  2026-04-20T09:56-ST.md  2026-04-23T01:19-ST.md  2026-06-25T15:26-ST.md  2026-06-25T17:26-ST.md  2026-07-03T10:55-ST.md  2026-07-06T00:28-ST.md  2026-07-06T11:04-ST.md  2026-07-21T00:49-ST.md
.github/workflows/: dsm-validate.yml
_inbox/: 2026-03-15_bl170-architecture-audit.md  2026-04-03_dsm-central_bl-303-navigation-vision-complete.md  2026-06-09_dsm-align-update.md  2026-07-21_dsm-align-update.md  README.md
_inbox/done/: 2026-02-01_dsm-alignment-gateway2-sprint1.md  2026-02-03_docs-folder-reference-sql-agent.md  2026-02-03_dsm-alignment-cross-project-sql-agent.md  2026-02-04_dsm-central-feedback-epoch2-inputs.md  2026-02-09_dsm-central-feedback-convention-linting.md  2026-02-12_dsm-central-experiments-migration.md  2026-03-09_dsm-central-bl156-repo-mapping.md  2026-03-13_dsm-central_epoch-4-alignment-response.md  2026-03-15_bl170-architecture-audit.md  2026-03-17_dsm-central_ge-feedback-audit-complete.md  2026-03-18_dsm-central_bl222-alignment-resolved.md  2026-03-18_dsm-central_bl222-parser-alignment.md  2026-03-20_dsm-central_exp-009-framing-review-response.md  2026-03-21_readme-brand-alignment.md  2026-04-07_heating-systems-conversational-ai_contribution-playbook-request.md  2026-04-14_dsm-central_s47-findings-response.md  2026-04-20_dsm-align-update.md  2026-06-25_dsm-align-update.md  dsm-central-knowledge-graph-export.md  dsm-central-reachability-experiment.md  dsm-central.md  dsm-central_2026-02-25.md  dsm-docs-folder-reference.md
data/experiments/: exp003_tfidf_threshold.py  exp003b_real_data_validation.py  exp003b_results.csv  exp004_graph_performance.py  exp005_falkordb_integration.py  exp005_results.txt  exp006_git_ref_temporal.py
docs/: dsm-feedback-backlogs.md
docs/backlog/: 2026-02-03_docs-folder-reference-sql-agent.md  2026-02-03_dsm-alignment-cross-project-sql-agent.md  2026-02-04_dsm-central-feedback-epoch2-inputs.md  2026-02-09_dsm-central-feedback-convention-linting.md  README.md  dsm-docs-folder-reference.md
docs/blog/: README.md  blog-draft.md  journal.md  linkedin-post.md  materials.md
docs/checkpoints/: 2026-02-01_sprint1-complete.md  2026-02-01_sprint2-complete.md  2026-02-03_sprint3-closure-and-docs.md  2026-02-04_trailing-period-fix.md  2026-02-05_wsl-migration-verified_checkpoint.md  2026-02-06_sprint4-complete_checkpoint.md  2026-02-10_sprint5-complete_checkpoint.md  2026-02-24_sprint6-complete_checkpoint.md  2026-02-28_sprint7-complete_checkpoint.md  2026-03-03_sprint8-complete_checkpoint.md  2026-03-03_sprint8-started_checkpoint.md  README.md  session-28-light-checkpoint.md  session-29-light-checkpoint.md  session-38-light-checkpoint.md  session-39-light-checkpoint.md  sprint-10-completion.md  sprint-13-checkpoint.md  sprint-14-checkpoint.md
docs/decisions/: 2026-04-02_s44_align-report.md  DEC-001_parser_library_choice.md  DEC-002_cli_design_choices.md  DEC-003_error_remediation_strategy.md  DEC-005-semantic-validation-approach.md  DEC-006-graph-database-selection.md  DEC-007-python-312-upgrade.md  DEC-008-heading-based-section-ids.md  README.md
docs/feedback/: 2026-03-20_s41_backlogs.md  README.md  backlogs.md  blog.md  methodology.md
docs/guides/: config-reference.md  remediation-guide.md
docs/handoffs/: 2026-01-31_phase0-complete_handoff.md  2026-02-04_epoch1-complete_dsm-handoff.md  2026-02-04_section-2.6-errors_dsm-handoff.md  README.md  wsl_migration_guide.md
docs/plan/: SPRINT_PLAN.md  epoch-1-plan.md  epoch-2-plan.md
docs/plans/: README.md  (+3 more)
experiments/: exp003_tfidf_threshold.py  exp003b_real_data_validation.py  exp003b_results.csv
scripts/: pre-commit-hook.sh
src/: cli.py
tests/: test_cli.py  test_cli_compare.py  test_cli_git_ref.py  test_cli_graph_db.py  test_cli_heading_refs.py  test_cli_inventory.py  test_cli_semantic.py  test_config.py  test_cross_repo.py  test_declared_refs.py  test_filter.py  test_git_resolver.py  test_graph.py  test_graph_diff.py  test_graph_store.py  test_heading_sections.py  test_inventory.py  test_knowledge_summary.py  test_linter.py  test_observed_refs.py  test_parser.py  test_prescribed_refs.py  test_repo_diff.py  test_reporter.py  test_section_index.py  test_semantic.py  test_usage_diff.py  test_usage_report.py  test_validator.py
(+275 files in other folders)
